uploaded consumer smart contract

--- a/cl-job-config.toml
+++ b/cl-job-config.toml
@@ -12,8 +12,8 @@ observationSource = """
 
     decode_cbor  [type=cborparse data="$(decode_log.data)"]
     fetch        [type=bridge name="igtokenizer-ea" requestData="{\\"id\\": $(jobSpec.externalJobID), \\"data\\": { \\"postId\\": $(decode_cbor.postId), \\"hashToVerify\\": $(decode_cbor.hashToVerify)}}"]
-    parse        [type=jsonparse path="descriptionValue" data="$(fetch)"]
-    encode_data  [type=ethabiencode abi="(uint256 value)" data="{ \\"value\\": $(parse) }"]
+    parse        [type=jsonparse path="data,result" data="$(fetch)"]
+    encode_data  [type=ethabiencode abi="(bool result)" data="{ \\"result\\": $(parse) }"]
     encode_tx    [type=ethabiencode
                   abi="fulfillOracleRequest(bytes32 requestId, uint256 payment, address callbackAddress, bytes4 callbackFunctionId, uint256 expiration, bytes32 data)"
                   data="{\\"requestId\\": $(decode_log.requestId), \\"payment\\": $(decode_log.payment), \\"callbackAddress\\": $(decode_log.callbackAddr), \\"callbackFunctionId\\": $(decode_log.callbackFunctionId), \\"expiration\\": $(decode_log.cancelExpiration), \\"data\\": $(encode_data)}"
